--- a/public/index.css
+++ b/public/index.css
@@ -15,19 +15,31 @@ html {
 }
 
 
+/*
+.gametile {
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+ If the screen size is 600px wide or less, hide the element 
+@media screen and (max-width: 500px) {
+  .gametile {
+    display: none;
+  }
+}*/
+
 
 body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.3em;
   letter-spacing: .5px;
-  width: 75vw;
-  margin: 0 auto;
+  /*  width: 75vw;*/
 }
 
 .center {
   text-align: center;
-  margin: 0 auto;
 }
 
 .redColor {
@@ -75,10 +87,16 @@ body {
   -o-transform: scale(1, 1.5);
 }
 
+/*
 .imgIntro {
-  width: 100%;
+  width: 50%;
   height: auto;
+  object-fit: fill;
 }
+
+.tiles {
+  object-fit: contain;
+}*/
 
 
 
