--- a/public/float-grid.css
+++ b/public/float-grid.css
@@ -3,32 +3,44 @@
 }
 
 /* Create three unequal columns that floats next to each other */
+.row {
+  display: flex;
+}
+
 .column {
+  flex: 1;
   float: left;
   padding: 10px;
-  height: 300px;
+  height: 100%;
   min-height: auto;
   /* Should be removed. Only for demonstration */
 }
 
 .left,
 .right {
-  width: 25%;
+  width: auto;
 }
 
 .middle {
-  width: 50%;
+  width: 80%;
 }
 
-/* Clear floats after the columns 
+.tiles {
+  height: 70%;
+  width: 70%;
+  object-fit: contain;
+}
+
+
 .row:after {
   content: "";
   display: table;
   clear: both;
-}*/
+}
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+
+@media screen and (orientation: portrait) {
   .middle {
     width: 100%;
   }
