--- a/public/float-grid.css
+++ b/public/float-grid.css
@@ -2,54 +2,70 @@
   box-sizing: border-box;
 }
 
-/* Create three unequal columns that floats next to each other */
-.row {
-  display: flex;
-}
-
-.column {
-  flex: 1;
-  float: left;
-  padding: 10px;
-  height: 100%;
-  min-height: auto;
-  /* Should be removed. Only for demonstration */
-}
-
-.left,
-.right {
-  width: auto;
-}
-
 .middle {
-  width: 80%;
+  width: 100%;
 }
 
-.tiles {
-  height: 70%;
-  width: 70%;
-  object-fit: contain;
+.left {
+  display: none;
+}
+
+.right {
+  display: none;
 }
 
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+@media screen and (min-width: 600px) {
+  .wrapper {
+    margin: 0 auto;
+  }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+  .row {
+    display: flex;
+    align-items: center;
+  }
 
-@media screen and (orientation: portrait) {
-  .middle {
-    width: 100%;
+  .column {
+    float: left;
+    padding: 10px;
+    height: 100vh;
+    align-items: center;
+    align-self: center;
+  }
+
+  .left,
+  .right {
+    display: initial;
+    flex: 1;
+    position: absolute;
+    width: 30%;
+    height: 100%;
+  }
+
+  .starttiles {
+    float: right;
   }
 
   .left {
-    display: none;
+    left: 0px;
+    margin-left: 10px;
   }
 
   .right {
-    display: none;
+    right: 0px;
+    margin-right: 10px;
   }
+
+  .middle {
+    width: 50%;
+  }
+
+}
+
+@media screen and (min-width: 1000px) {
+  .imgIntro {
+    width: 100%;
+    max-height: 35vh;
+  }
+
 }
